--- a/dtpc_case_study.html
+++ b/dtpc_case_study.html
@@ -15,6 +15,7 @@
         
         <!--Fonts-->
         <link rel="stylesheet" href="https://use.typekit.net/yqo7rmg.css">
+        <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,400i,700&display=swap" rel="stylesheet">
         
         <!--Necessary for Responsive Design-->
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -72,7 +73,7 @@
                                 </button>
                             </h2>
                         </div>
-                        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                        <div id="collapseTwo" class="collapse show jen-show" aria-labelledby="headingTwo" data-parent="#accordionExample">
                             <div class="card-body jen-card-body">
                                 <img src="images/DTPC_current_site.png" alt="DTPC Current Website" id="DTPC_current_site">
                                 <p>The website has decent bones as far as pages and navigation, there are definite improvements that we chose to make, but we felt there was a good starting point.</p>
@@ -89,7 +90,7 @@
                                 </button>
                             </h2>
                         </div>
-                        <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                        <div id="collapseThree" class="collapse show jen-show" aria-labelledby="headingThree" data-parent="#accordionExample">
                             <div class="card-body jen-card-body">
                                 <img src="images/CompetitiveAnalysis.png" alt="DTPC Competitive Analysis" id="CompetitiveAnalysis">
                                 <p>We started our research with a competitive analysis. We found several other Desert Tortoise non-profit websites and did a SWOT analysis of each to figure out the things we did and did not want to apply to our new website. In the chart above you can see where the current DTPC  (the green tortoise logo) falls in comparison to the other websites and where we (the new text only DTPC logo) hope to fall with our redesign.</p>
@@ -110,7 +111,7 @@
                                 </button>
                             </h2>
                         </div>
-                        <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
+                        <div id="collapseFour" class="collapse show jen-show" aria-labelledby="headingFour" data-parent="#accordionExample">
                             <div class="card-body jen-card-body">
                                 <h3>Problem:</h3>
                                 <p>Users do not feel comfortable donating their money to an organization that doesn’t show how they spend their funds. Nor if the website does not have an air of credibility through a more professional looking design.</p>
@@ -149,7 +150,7 @@
                                 </button>
                             </h2>
                         </div>
-                        <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionExample">
+                        <div id="collapseFive" class="collapse show jen-show" aria-labelledby="headingFive" data-parent="#accordionExample">
                             <div class="card-body jen-card-body">
                                 <h3>Digital Sketches / LoFi Wireframes:</h3>
                                 <p>As a team we used InVision’s Freehand to sketch our wireframes together. We designed for desktop and mobile.</p>
@@ -191,7 +192,7 @@
                                 </button>
                             </h2>
                         </div>
-                        <div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-parent="#accordionExample">
+                        <div id="collapseSix" class="collapse show jen-show" aria-labelledby="headingSix" data-parent="#accordionExample">
                             <div class="card-body jen-card-body">
                                 <h3>
                                     <a href="https://xd.adobe.com/view/f3f3a9ab-114c-46bb-6151-a43310b7363a-85c2/" target="_blank">Click here to view Prototype</a>
@@ -218,7 +219,7 @@
                                 </button>
                             </h2>
                         </div>
-                        <div id="collapseSeven" class="collapse" aria-labelledby="headingSeven" data-parent="#accordionExample">
+                        <div id="collapseSeven" class="collapse show jen-show" aria-labelledby="headingSeven" data-parent="#accordionExample">
                             <div class="card-body jen-card-body">
                                 <ul>
                                     <li>Design the rest of the pages for both the desktop and mobile prototypes.</li>
@@ -247,5 +248,7 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <!--Personal JS-->
+        <script src="js/index.js" type="text/javascript"></script>
     </body>
 </html>
