--- a/index.html
+++ b/index.html
@@ -58,12 +58,52 @@
             </div>
             <div class="row project">
                 <div class="col-md-6 col-12">
+                    <img src="images/BeeFriendlyProject.png" alt="Image Introducing Bee Friendly Website" class="workPhoto">
+                </div>
+                <div class="col-md-6 col-12">
+                    <h2 class="project-title">Bee Friendly Website</h2>
+                    <p class="project-description">This group project was to choose a cause and then design a website or an app to address the cause. Our group chose the plight of the bees, we developed our own fictional charitable organization then designed and programmed a website for it.</p>
+                    <button type="button" class="btn btn-primary jen-work-btn" data-toggle="modal" data-target=".bee-friendly-modal">View Project</button>
+                </div>
+            </div>
+            <div class="modal fade bee-friendly-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-xl" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header jen-modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">Bee Friendly Website Case Study</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true" style="color: white;">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body jen-modal-body">
+                            <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTutL_6TACrfwo0TtsdLEM47fZFFP_ROOfvlmaK5mSrN_fw9pBnKMV_SR75yR819Kp8Sz99kJgwE76C/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row project">
+                <div class="col-md-6 col-12">
                     <img src="images/EnergyGovProject.png" alt="Screenshot of Energy.gov Redesign" class="workPhoto">
                 </div>
                 <div class="col-md-6 col-12">
                     <h2 class="project-title">Energy.gov Website Redesign</h2>
                     <p class="project-description">This individual project was to redesign a .gov website. I chose the Department of energy because I felt like their existing website was built mainly for mobile viewing and had room for improvement when viewed on a desktop computer.</p>
-                    <button type="button" class="btn btn-secondary jen-work-btn">View Project</button>
+                    <button type="button" class="btn btn-primary jen-work-btn" data-toggle="modal" data-target=".energygov-modal">View Project</button>
+                </div>
+            </div>
+            <div class="modal fade energygov-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-xl" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header jen-modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">Energy.gov Website Redesign Case Study</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true" style="color: white;">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body jen-modal-body">
+                            <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQPA_ZQdXqb99bBbNmNwjbKdV3Te8efgQtjbV9Z0Bcgh97-xqBy9obwGwEFF1tXKuIHyQ1GvqNNZdKf/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="row project">
@@ -73,17 +113,22 @@
                 <div class="col-md-6 col-12">
                     <h2 class="project-title">Group Travel App Design</h2>
                     <p class="project-description">This individual project was to design a travel app. The focus was on user research and wire framing with a dash of styling. I choose to design a travel app to accommodate people traveling in larger groups where there is much confusion in planning due to so many people to accommodate.</p>
-                    <button type="button" class="btn btn-secondary jen-work-btn">View Project</button>
+                    <button type="button" class="btn btn-primary jen-work-btn" data-toggle="modal" data-target=".group-travel-modal">View Project</button>
                 </div>
             </div>
-            <div class="row project">
-                <div class="col-md-6 col-12">
-                    <img src="images/PlantFriendProject.png" alt="Image Introducing Plant Friend App" class="workPhoto">
-                </div>
-                <div class="col-md-6 col-12">
-                    <h2 class="project-title">Plant Friend App Design</h2>
-                    <p class="project-description">This partner project was to design a mobile application that would help solve an everyday need. My partner and I choose to design an app to help the user care for their plants with an element of gamification.</p>
-                    <button type="button" class="btn btn-secondary jen-work-btn">View Project</button>
+            <div class="modal fade group-travel-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-xl" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header jen-modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">Energy.gov Website Redesign Case Study</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true" style="color: white;">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body jen-modal-body">
+                            <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSy-aYd5GN4-6NhzDaxHvXWFAKywjmt3O_3acv3rh5q1UeyidKZ28DR_O-plg2LuAQkIjHGP_Owiyz_/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
